# exhale

./: CMakeLists.txt  README.md
.github/workflows/: build-release.yml  sync.yml
include/: License.htm  Release.htm  version.h
src/app/: basicWavReader.cpp  basicWavReader.h  exhaleApp.cpp  exhaleApp.rc  loudnessEstim.cpp  loudnessEstim.h
src/lib/: bitAllocation.cpp  bitAllocation.h  bitStreamWriter.cpp  bitStreamWriter.h  entropyCoding.cpp  entropyCoding.h  exhaleEnc.cpp  exhaleEnc.h  exhaleLibPch.cpp  exhaleLibPch.h  quantization.cpp  quantization.h  specAnalysis.cpp  specAnalysis.h  specGapFilling.cpp  specGapFilling.h
